<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">白い熊 GNU Jami</string>
    <string name="app_author" translatable="false">Savoir-faire Linux Inc.</string>
    <string name="app_release" translatable="false">Euclid - %1$s</string>
    <string name="app_website" translatable="false">https://jami.net</string>
    <string name="app_website_contribute" translatable="false"><u>https://jami.net/contribute</u></string>
    <string name="gnu_license_website" translatable="false">https://www.gnu.org/licenses/gpl.html</string>
    <string name="savoirfairelinux_website" translatable="false">https://savoirfairelinux.com</string>
    <string name="copyright" translatable="false">2004–2025 Savoir-faire Linux Inc.</string>
    <string name="submit_issue_title">Submit issue</string>
    <string name="submit_issue_action_description"><u>Create new issue</u></string>
    <string name="submit_issue_link" translatable="false">https://git.jami.net/savoirfairelinux/jami-client-android/issues</string>
    <string name="section_license">License</string>
    <string name="switch_conversation">Switch conversation</string>
    <string name="delete_conversation_confirmation">Are you sure you want to delete this conversation?</string>
    <string name="acc_profile_photo_capture">Capture photo</string>
    <string name="view_switch_camera">Switch camera</string>
    <string name="sponsor_section">Jami is free software developed and supported by</string>
    <string name="copyright_section">Copyright</string>
    <string name="contribute_section">Contribute</string>
    <string name="version_section">Version</string>
    <string name="no_browser_app_installed">No web browser app found, install one to view this page.</string>
    <string name="website_chooser_title">View website using…</string>
    <string name="license">This software is provided \"as is\", without warranty of any kind. For details, see <u>GNU General Public License version 3 or later</u></string>
    <string name="description">白い熊 GNU Jami is free software for universal communication which respects the freedoms and privacy of its users.</string>
    <string name="credits">Credits</string>
    <string name="pip_title">白い熊 GNU Jami Conference</string>
    <string name="call_service_description">This service is necessary to keep your calls running in the foreground. It only runs during calls.</string>
    <string name="data_transfer_service_description">This service is necessary to display persistent notifications during file transfers. It only runs during file transfers.</string>
    <string name="thank_note">We would like to thank our contributors, whose efforts over many years have made this software what it is.</string>
    <string name="developers">Developers</string>
    <string name="media">Media</string>
    <string name="community_management">Community Management</string>
    <string name="special_thanks">Special thanks to</string>
    <string name="credits_developer" translatable="false">
        Abhishek Ojha
        \nAdrien Béraud
        \nAlassane Yattara
        \nAlbert Babí
        \nAlexander Lussier-Cullen
        \nAlexandr Sergheev
        \nAlexandre Eberhardt
        \nAlexandre Lision
        \nAlexandre Savard
        \nAlexandre Viau
        \nAline Bonnet
        \nAline Gondim Santos
        \nAlireza Toghiani
        \nAmin Bandali
        \nAmirHossein Naghshzan
        \nAmna Snene
        \nAndreas Hatziiliou
        \nAndreas Traczyk
        \nAnthony Léonard
        \nBrando Tovar
        \nCapucine Berthet
        \nCharles-Francis Damedey
        \nChristophe Villemer
        \nCyrille Béraud
        \nDorina Mosku
        \nEden Abitbol
        \nÉdric Milaret
        \nÉloi Bail
        \nEmma Falkiewitz
        \nEmmanuel Lepage-Vallée
        \nEmmanuel Milou
        \nEric Bjarstal
        \nFadi Shehadeh
        \nFélix Boucher
        \nFranck Laurent
        \nFrançois-Simon Fauteux-Chapleau
        \nFrédéric Guimont
        \nGuillaume Heller
        \nGuillaume Roguez
        \nHadrien De Sousa
        \nHugo Lefeuvre
        \nHussein Abdallah
        \nIlyas Erdogan
        \nIo Daza-Dillon
        \nJérôme Lamy
        \nJulien Grossholtz
        \nJulien Robert
        \nKateryna Kostiuk
        \nKessler DuPont-Teevin
        \nLanius-collaris
        \nLarbi Gharib
        \nLéo Banno-Cloutier
        \nLéopold Chappuis
        \nLiam Courdoson
        \nLoïc Siret
        \nLouis Maillard
        \nMathéo Joseph
        \nMaxim Cournoyer
        \nMichel Schmit
        \nMingrui Zhang
        \nMohamed Amine Younes Bouacida
        \nMohamed Chibani
        \nNghia Dam
        \nNicolas Jäger
        \nNicolas Reynaud
        \nNicolas Vengeon
        \nOlivier Gregoire
        \nOlivier Soldano
        \nPage Magnier-Slimani
        \nPatrick Keroulas
        \nPavan Koushik Nellore
        \nPeymane Marandi
        \nPhilippe Gorley
        \nPierre Duchemin
        \nPierre Lespagnol
        \nPierre Nicolas
        \nRaphaël Brulé
        \nRawaha El Houssayni
        \nRayan Osseiran
        \nRomain Bertozzi
        \nSaher Azer
        \nSamuel Kayode
        \nSébastien Blin
        \nSeva Ivanov
        \nSilbino Gonçalves Matado
        \nSimon Désaulniers
        \nSimon Zeni
        \nStepan Salenikovich
        \nThibault Wittemberg
        \nThomas Ballasi
        \nTrevor Tabah
        \nVitalii Nikitchyn
        \nVsevolod Ivanov
        \nXavier Jouslin de Noray
        \nYang Wang
        \nZiwei Wang</string>
    <string name="credits_media" translatable="false">
        Charlotte Hoffmann
        \nMarianne Forget</string>
    <string name="credits_communitymanagement" translatable="false">
        Dorina Mosku
        \nCabrel Tambue
        \nLoïc Bogino</string>
    <string name="credits_specialthanks" translatable="false">
        Anna
        \nElys
        \nVeroJeanLuc</string>
    <string name="end_note">This is a list of people who have made a significant investment of time, with useful results, into Jami. Any such contributors who wish to be added to the list should contact the Jami team at contact@jami.net.</string>
    <string name="error_no_network">No network connectivity</string>
    <string name="error_account_offline">The account is offline</string>
    <string name="ab_action_chat">Text messaging</string>
    <string name="menu_item_contact_request">Contact requests</string>
    <string name="menu_item_accounts">Manage accounts</string>
    <string name="menu_item_account">Manage account</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_app_settings">App Settings</string>
    <string name="menu_item_account_settings">Account Settings</string>
    <string name="menu_item_sync">Sync all accounts</string>
    <string name="menu_item_extension_list">Extensions Settings</string>
    <string name="menu_item_share">Share my account</string>
    <string name="menu_item_about">About 白い熊 GNU Jami</string>
    <string name="video_setting_title">Video Settings</string>
    <string name="dial_number">Dial number</string>
    <string name="invitation_card_title">Invitations received</string>
    <plurals name="home_conferences_title">
        <item quantity="one">%d Conversation</item>
        <item quantity="other">%d Conversations</item>
    </plurals>
    <string name="searchbar_hint">Search or add</string>
    <string name="choose_number">Choose a number</string>
    <string name="notif_missed_incoming_call">Missed incoming call</string>
    <string name="notif_missed_outgoing_call">Missed outgoing call</string>
    <string name="notif_incoming_call_title">Incoming call from %1$s</string>
    <string name="notif_incoming_call">Incoming call</string>
    <string name="notif_outgoing_call_title">Outgoing call to %1$s</string>
    <string name="notif_outgoing_call">Outgoing call</string>
    <string name="notif_current_call_title">Ongoing call with %1$s</string>
    <string name="notif_current_call">Ongoing call</string>
    <string name="notif_channel_call_in_progress">Call in progress</string>
    <string name="notif_channel_calls">Calls</string>
    <string name="notif_channel_missed_calls">Missed calls</string>
    <string name="notif_channel_incoming_calls">Incoming calls</string>
    <string name="notif_channel_messages">Messages</string>
    <string name="notif_channel_protected">Protected contacts</string>
    <string name="notif_channel_requests">Requests</string>
    <string name="notif_channel_file_transfer">File transfer</string>
    <string name="notif_channel_sync">Data sync</string>
    <string name="notif_channel_background_service">Background service</string>
    <string name="notif_channel_background_service_descr">Allows receiving calls and messages anytime.</string>
    <string name="notif_group_calls">Calls</string>
    <string name="notif_inprogress_group_call">Call in progress</string>
    <string name="notif_background_service">白い熊 GNU Jami is currently running in the background</string>
    <string name="notif_mark_as_read">Mark as read</string>
    <string name="notif_dismiss">Dismiss</string>
    <string name="notif_reply">Reply</string>
    <string name="notif_incoming_file_transfer_title">Incoming file from %1$s</string>
    <string name="notif_outgoing_file_transfer_title">Sending file to %1$s</string>
    <string name="notif_incoming_picture">Picture from %1$s</string>
    <string name="notif_sync_title">Syncing data…</string>
    <string name="notif_location_title">Sharing location with %1$s</string>
    <string name="notif_channel_reconnect">Background syncing</string>
    <string name="notif_reconnect_title">白い熊 GNU Jami is syncing…</string>
    <string name="location_share_contact">%1$s is sharing location with you</string>
    <string name="notif_location_multi_title">Sharing location with %1$d contacts</string>
    <string name="notif_location_remaining">%1$d minutes remaining</string>
    <string name="notif_location_action_stop">Stop sharing location</string>
    <string name="location_share_action_start">Start sharing</string>
    <string name="location_share_action_stop">Stop sharing</string>
    <string name="location_share_about_title">Map information</string>
    <string name="location_share_about_message" translatable="false">Map data from OpenStreetMap.\n\n© OpenStreetMap contributors</string>
    <string name="location_share_about_osm_copy_url" translatable="false">https://www.openstreetmap.org/copyright</string>
    <string name="you_txt_prefix">You:</string>
    <string name="action_call_hangup">End call</string>
    <string name="action_call_resume">Resume</string>
    <string name="action_call_maximize">Maximize</string>
    <string name="action_call_minimize">Reduce</string>
    <string name="action_call_mute">Mute</string>
    <string name="action_call_unmute">Unmute</string>
    <string name="ongoing_call">Ongoing call</string>
    <string name="hist_in_call">Incoming call of %1$s</string>
    <string name="hist_out_call">Outgoing call of %1$s</string>
    <string name="call_duration">Lasted %s</string>
    <string name="call_on_hold">Call is on hold</string>
    <string name="start_error_title">Unable to start 白い熊 GNU Jami</string>
    <string name="action_call_accept">Accept call</string>
    <string name="action_call_accept_audio">Accept with audio</string>
    <string name="action_call_accept_video">Accept with video</string>
    <string name="share_label">Share</string>
    <string name="media_suppressed_badge">Suppressed</string>
    <string name="menu_location_sharing">Location sharing status</string>
    <string name="media_view_suppressed">View suppressed media</string>
    <string name="menu_file_open">Open file</string>
    <string name="menu_file_save">Save file</string>
    <string name="donation_donate">Donate</string>
</resources>