<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/baseline_autorenew_white_24dp"
        android:orderInCategory="99"
        android:title="@string/menu_item_sync"
        app:iconTint="#FFFF00"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_account_status"
        android:icon="@drawable/ic_status_offline"
        android:orderInCategory="100"
        android:title="Account online/offline"
        app:iconTint="#FFFF00"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_lightning"
        android:icon="@drawable/ic_proxy_flash"
        android:orderInCategory="101"
        android:title="DHT proxy / recover"
        app:iconTint="#FFFF00"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_baseline_more_vert"
        android:orderInCategory="102"
        android:title=""
        app:iconTint="@color/icon_color"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_account_settings"
                android:enabled="false"
                android:icon="@drawable/baseline_account_settings_24dp"
                android:title="@string/menu_item_account_settings"
                app:iconTint="@color/icon_color"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_advanced_settings"
                android:icon="@drawable/baseline_advanced_settings_24dp"
                android:title="@string/menu_item_app_settings"
                app:iconTint="@color/icon_color"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_ui_fonts_colors"
                android:title="白い熊 GNU Jami UI"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_donate"
                android:icon="@drawable/baseline_favorite_24"
                android:title="@string/donation_donate"
                app:iconTint="@color/donation_card_favorite_color"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_jami_24"
                android:iconTintMode="src_in"
                android:title="@string/menu_item_about"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_split_view"
                android:checkable="true"
                android:title="Split view"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_location_sharing"
                android:title="@string/menu_location_sharing"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>